# AX615_AOV_v2

./: .gitignore  CMakeLists.txt  README.md  rebuild_and_test.sh
app/alarm/: alarm_service_stub.cpp  alarm_service_stub.hpp  alarm_types.hpp  i_alarm_service.hpp
app/cloud/: cloud_action_mapper.cpp  cloud_action_mapper.hpp  cloud_core_command_bridge.cpp  cloud_core_command_bridge.hpp  cloud_packet_sink.cpp  cloud_packet_sink.hpp  cloud_property_mapper.cpp  cloud_property_mapper.hpp  cloud_report_builder.cpp  cloud_report_builder.hpp  cloud_service_stub.cpp  cloud_service_stub.hpp  cloud_types.hpp  i_cloud_service.hpp
app/config/: alarm_config.hpp  config_core_mapper.cpp  config_core_mapper.hpp  config_diff.cpp  config_diff.hpp  config_service_stub.cpp  config_service_stub.hpp  config_types.hpp  config_validation.cpp  config_validation.hpp  device_config.cpp  device_config.hpp  device_feature_config.hpp  i_config_service.hpp  media_config.hpp  record_config.hpp  work_mode_config.hpp
app/core/: aov_app_runtime.cpp  aov_app_runtime.hpp  aov_orchestrator.cpp  aov_orchestrator.hpp  aov_orchestrator_stub.cpp  aov_orchestrator_stub.hpp  aov_types.hpp  cloud_core_drain_mapper.cpp  cloud_core_drain_mapper.hpp  core_apply_coordinator.cpp  core_apply_coordinator.hpp  core_command_executor.cpp  core_command_executor.hpp  core_command_queue.cpp  core_command_queue.hpp  core_commands.hpp  core_drain_merge.hpp  core_event_queue.cpp  core_event_queue.hpp  core_events.hpp  core_runtime_facade.cpp  core_runtime_facade.hpp  core_state.hpp  core_timer.cpp  core_timer.hpp  core_wakeup_planner.cpp  core_wakeup_planner.hpp  i_aov_orchestrator.hpp  idle_sleep_controller.cpp  idle_sleep_controller.hpp  storage_core_drain_mapper.cpp  storage_core_drain_mapper.hpp  system_sleep_coordinator.cpp  (+3 more)
cmake/: toolchain_ax615.cmake
common/: status_code.hpp
docs/: AOV_板端调试整合计划.md  AOV_设计文档.html  AOV_配置与模块交互设计.md  CS6GV2.0.xlsx  LIBMEDIA_FIX_CHECKLIST.md  LIBMEDIA_MODIFICATIONS_COMPLETE.md  QSDEMO_INIT_SEQUENCE.md  QSDemo.rar  QSDemo_源码分析文档.md  VIN_DEBUG_ANALYSIS.md  VIN_ERROR_FINAL_DIAGNOSIS.md  VIN_FIX_SUMMARY.md  app_packet_产品化改造设计.md  app_storage_AOV本地存储设计说明.md  app模块开发计划与状态.md  batch1_app_core_config_头文件草案.md  batch1_app_core_config_接口设计.md  batch2_libsys_头文件草案.md  batch2_libsys_接口设计.md  batch3_libmedia_头文件草案.md  batch3_libmedia_接口设计.md  batch4_app_domain_头文件草案.md  batch4_app_domain_接口设计.md  batch4_从QSDemo移植实施方案.md  code_v2_关键时序冻结稿.md  code_v2_实施方案_v1.md  code_v2_实现边界冻结稿.md  code_v2_接口设计分批计划.md  code_v2_模块接口清单.md  code_v2_正式目录树.md  common_事件模型规范.md  common_回调与线程模型规范.md  common_头文件草案.md  common_状态码规范.md  libmedia对外接口完整设计.md  libmedia接口设计.md  libmedia调试计划.md  腾讯云SDK接入方案与实施计划.md
libmedia/: CMakeLists.txt
libmedia/Include/audio/: i_audio_stream_service.hpp
libmedia/Include/common/: media_types.hpp
libmedia/Include/detect/: i_detect_service.hpp
libmedia/Include/isp/: i_isp_service.hpp
libmedia/Include/osd/: i_osd_service.hpp
libmedia/Src/adapter/ax615/audio/: ax_audio_capture_adapter.cpp  ax_audio_capture_adapter.hpp  ax_audio_play_adapter.cpp  ax_audio_play_adapter.hpp  ax_audio_types.hpp
libmedia/Src/adapter/ax615/detect/: ax_detect_adapter.cpp  ax_detect_adapter.hpp
libmedia/Src/adapter/ax615/isp/: ax_isp_adapter.cpp  ax_isp_adapter.hpp
libmedia/Src/adapter/ax615/ivps/: ax_ivps_adapter.cpp  ax_ivps_adapter.hpp
libmedia/Src/adapter/ax615/jenc/: ax_jenc_adapter.cpp  ax_jenc_adapter.hpp
libmedia/Src/adapter/ax615/osd/: ax_osd_adapter.cpp  ax_osd_adapter.hpp
libmedia/Src/adapter/ax615/power/: ax_aov_power_adapter.cpp  ax_aov_power_adapter.hpp
libmedia/Src/adapter/ax615/sys/: ax_link_manager.cpp  ax_link_manager.hpp  ax_sys_adapter.cpp  ax_sys_adapter.hpp
libmedia/Src/adapter/ax615/venc/: ax_venc_adapter.cpp  ax_venc_adapter.hpp
libmedia/Src/adapter/ax615/vin/: ax_vin_adapter.cpp  ax_vin_adapter.hpp  sensor_registry.cpp  sensor_registry.hpp
libmedia/Src/adapter/ax615/vin/sensors/: os04d10_profile.cpp
libmedia/Src/audio/: audio_stream_service.cpp  audio_stream_service.hpp
libmedia/Src/detect/: detect_service.cpp  detect_service.hpp
libmedia/Src/isp/: isp_service.cpp  isp_service.hpp
libmedia/Src/osd/: osd_service.cpp  osd_service.hpp
libmedia/Src/pipeline/: media_pipeline_factory.cpp  media_pipeline_factory.hpp  media_pipeline_manager.cpp  media_pipeline_manager.hpp
libmedia/Src/video/: video_stream_service.cpp  video_stream_service.hpp
libsys/: CMakeLists.txt
libsys/Src/device/: device_control_service_stub.cpp  device_control_service_stub.hpp
libsys/Src/device/4G/: modem_service_stub.hpp
libsys/Src/modem/: modem_service_stub.cpp
libsys/Src/network/: network_service_stub.cpp  network_service_stub.hpp
libsys/Src/power/: power_service_stub.cpp  power_service_stub.hpp
libsys/Src/runtime/: sys_runtime.cpp  sys_runtime.hpp  sys_runtime_factory.cpp  sys_runtime_factory.hpp
libsys/Src/storage/: storage_service_stub.cpp  storage_service_stub.hpp
libsys/include/network/: i_network_service.hpp
libsys/include/power/: i_power_service.hpp
libsys/include/runtime/: i_sys_runtime.hpp
tests/unit/: CMakeLists.txt  test_alarm_service_contract.cpp  test_aov_app_runtime_contract.cpp  test_cloud_action_mapper_contract.cpp  test_cloud_core_command_bridge_contract.cpp  test_cloud_core_drain_mapper_contract.cpp  test_cloud_packet_sink_contract.cpp  test_config_core_mapping_contract.cpp  test_config_phase1_contract.cpp  test_config_service_core_policy_contract.cpp  test_core_command_executor_contract.cpp  test_core_command_queue_contract.cpp  test_core_drain_merge_contract.cpp  test_core_state_events_contract.cpp  test_jenc_adapter_contract.cpp  test_sensor_registry_contract.cpp  test_storage_service_drain_integration.cpp  test_tencent_cloud_service_contract.cpp  test_tencent_cloud_storage_contract.cpp  test_tencent_generated_callback_dispatcher_contract.cpp  test_tencent_live_stream_contract.cpp  test_tencent_product_model_bridge_contract.cpp  test_tencent_sdk_adapter_contract.cpp  test_tencent_stream_adapter_contract.cpp  test_venc_adapter_contract.cpp
(+257 files in other folders)
